--- a/poo/.tko/repository.yaml
+++ b/poo/.tko/repository.yaml
@@ -7,11 +7,13 @@ version: 0.0.1
 database: database
 expanded:
 - campanha-principal
-tasks: {}
+- bloco_b-primeiras-classes
+tasks:
+  enxugar: '{rate:100}'
 flags:
   quests: 0
   tracks: 0
   tasks: 0
   graph: 0
   xray: 0
-index: bloco_b-primeiras-classes
+index: enxugar
